--- a/package.json
+++ b/package.json
@@ -1,43 +1,40 @@
 {
   "name": "react-font-size-by-text-length",
+  "description": "A component that dynamically sets a font size based on the length of text passed into it",
+  "keywords": [
+    "react dynamic font size",
+    "react font size",
+    "fontsize",
+    "dynamic",
+    "change font size",
+    "text length",
+    "font size by text length",
+    "text",
+    "fontsize",
+    "automatic"
+  ],
+  "main": "./lib/cjs/index.js",
+  "module": "./lib/esm/index.js",
+  "types": "./lib/esm/index.d.ts",
   "version": "0.1.0",
   "private": true,
+  "files": [
+    "/lib"
+  ],
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.5.4",
-    "web-vitals": "^2.1.3"
+    "typescript": "^4.5.4"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "build-lib": "npm run build-lib:esm && npm run build-lib:cjs",
+    "build-lib:esm": "tsc",
+    "build-lib:cjs": "tsc --module commonjs --outDir lib/cjs"
   }
 }
