--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
     "build-lib": "npm run build-lib:esm && npm run build-lib:cjs",
     "build-lib:esm": "tsc",
     "build-lib:cjs": "tsc --module commonjs --outDir lib/cjs"
-  }
+  },
+  "repository": "https://github.com/marvinscheffold/react-font-size-by-text-length"
 }
